--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class="spinner">
+      <div class="double-bounce1"></div>
+      <div class="double-bounce2"></div>
+    </div>
+    <div class="text-center">
+      TinTanSoft &copy; 2017 Copyright.
+    </div>
+  </app-root>
 </body>
 </html>
